--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -184,6 +184,7 @@ templates:
           <div class="ap-m-benefit-text">
             <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
             <span class="ap-m-benefit-text-copy"> {{ _(benefit.text) }} </span>
+            {% if benefit.text-2 %}<span class="ap-m-benefit-text-copy"> {{ _(benefit.text-2) }}</span>{% endif %}
           </div>
         </div>
 
