--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -183,8 +183,17 @@ templates:
           </div>
           <div class="ap-m-benefit-text">
             <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
-            <span class="ap-m-benefit-text-copy"> {{ _(benefit.text) }} </span>
-            <span class="ap-m-benefit-text-copy">{% if benefit.text-2 %} {{ _(benefit.text-2) }} {% endif %}</span>
+            {% raw %}
+            <div>
+                {% for i in range(1, 4) %}
+                    {% set text_field = 'text-' + i|string %} 
+                    {% if my_data[text_field] %}
+                        <span class="ap-m-benefit-text-copy">{{ my_data[text_field] }}</span>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            {% endraw %}
+            <!-- <span class="ap-m-benefit-text-copy"> {{ _(benefit.text) }} </span> -->
           </div>
         </div>
 
