--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -183,16 +183,14 @@ templates:
           </div>
           <div class="ap-m-benefit-text">
             <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
-            {% raw %}
             <div>
                 {% for i in range(1, 4) %}
                     {% set text_field = 'text-' + i|string %} 
-                    {% if my_data[text_field] %}
-                        <span class="ap-m-benefit-text-copy">{{ my_data[text_field] }}</span>
+                    {% if (text_field) %}
+                        <span class="ap-m-benefit-text-copy">{{ _(text_field) }}</span>
                     {% endif %}
                 {% endfor %}
             </div>
-            {% endraw %}
             <!-- <span class="ap-m-benefit-text-copy"> {{ _(benefit.text) }} </span> -->
           </div>
         </div>
