--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -175,28 +175,24 @@ templates:
     <div class="ap-o-benefits-overview-list ap-o-benefits-overview-list-developers">
 
       {% for benefit in doc.benefits.stories.developer %}
-
         <div class="ap-m-benefit">
           <div class="ap-m-benefit-icon">
             {% do doc.icons.useIcon('icons/'+ benefit.icon + '.svg') %}
             <svg class="ap-m-benefit-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#{{ benefit.icon }}"></use></svg>
           </div>
+          {% raw %}
           <div class="ap-m-benefit-text">
             <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
-            <div>
-                {% for i in range(1, 4) %}
-                    {% set text_field = 'text-' + i|string %} 
-                    {% if (text_field) %}
-                        <span class="ap-m-benefit-text-copy">{{ _(text_field) }}</span>
-                    {% endif %}
-                {% endfor %}
-            </div>
-            <!-- <span class="ap-m-benefit-text-copy"> {{ _(benefit.text) }} </span> -->
+            {% for i in range(1, 5) %} 
+              {% set text_field = 'text-' + i|string %}
+              {% if benefit[text_field] %}
+                <span class="ap-m-benefit-text-copy">{{ _(benefit[text_field]) }}</span>
+              {% endif %}
+            {% endfor %}
           </div>
+          {% endraw %}
         </div>
-
-    {% endfor %}
-    </div>
+      {% endfor %}
 
     <div class="ap-o-benefits-overview-list ap-o-benefits-overview-list-business">
 
