--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -182,13 +182,19 @@ templates:
             <svg class="ap-m-benefit-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#{{ benefit.icon }}"></use></svg>
           </div>
           <div class="ap-m-benefit-text">
-            <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
-            {% for i in range(1, 5) %} 
-              {% set text_field = 'text-' + i|string %}
-              {% if benefit[text_field] %}
-                <span class="ap-m-benefit-text-copy">{{ _(benefit[text_field]) }}</span>
+              <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
+              {% if benefit.text_1 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_1) }} </span>
               {% endif %}
-            {% endfor %}
+              {% if benefit.text_2 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_2) }} </span>
+              {% endif %}
+              {% if benefit.text_3 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_3) }} </span>
+              {% endif %}
+              {% if benefit.text_4 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_4) }} </span>
+              {% endif %}
           </div>
         </div>
       {% endfor %}
