replaced _ with - to align with YAML field name

--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -183,17 +183,17 @@ templates:
           </div>
           <div class="ap-m-benefit-text">
               <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
-              {% if benefit.text_1 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_1) }} </span>
+              {% if benefit.text-1 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-1) }} </span>
               {% endif %}
-              {% if benefit.text_2 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_2) }} </span>
+              {% if benefit.text-2 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-2) }} </span>
               {% endif %}
-              {% if benefit.text_3 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_3) }} </span>
+              {% if benefit.text-3 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-3) }} </span>
               {% endif %}
-              {% if benefit.text_4 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_4) }} </span>
+              {% if benefit.text-4 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-4) }} </span>
               {% endif %}
           </div>
         </div>
