--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -197,7 +197,10 @@ templates:
               {% endif %}
           </div>
         </div>
+
       {% endfor %}
+
+    </div>
 
     <div class="ap-o-benefits-overview-list ap-o-benefits-overview-list-business">
 
