--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -183,8 +183,8 @@ templates:
           </div>
           <div class="ap-m-benefit-text">
               <span class="ap-m-benefit-text-headline">{{ _(benefit.headline) }}</span>
-              {% if benefit.text-1 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-1) }} </span>
+              {% if benefit.text %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text) }} </span>
               {% endif %}
               {% if benefit.text-2 %}
                   <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-2) }} </span>
