--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -186,14 +186,14 @@ templates:
               {% if benefit.text %}
                   <span class="ap-m-benefit-text-copy"> {{ _(benefit.text) }} </span>
               {% endif %}
-              {% if benefit.text-2 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-2) }} </span>
+              {% if benefit.text_2 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_2) }} </span>
               {% endif %}
-              {% if benefit.text-3 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-3) }} </span>
+              {% if benefit.text_3 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_3) }} </span>
               {% endif %}
-              {% if benefit.text-4 %}
-                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text-4) }} </span>
+              {% if benefit.text_4 %}
+                  <span class="ap-m-benefit-text-copy"> {{ _(benefit.text_4) }} </span>
               {% endif %}
           </div>
         </div>
