--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -1,8 +1,8 @@
 ---
-$title: Learn AMP with free courses
+$title: Learn ABC with free courses
 $titles:
   navigation: Courses
-  sidebar: Learn AMP
+  sidebar: Learn ABC
   teaser: Courses
 $view: /views/overview/courses.j2
 $path: /documentation/courses/index.html
@@ -10,21 +10,21 @@ $localization:
   path: /{locale}/documentation/courses/index.html
 $order: 0
 
-description: "Learn AMP by taking these courses. Or, if you're an instructor, use these free resources to run your own class!"
+description: "Learn ABC by taking these courses. Or, if you're an instructor, use these free resources to run your own class!"
 flyout:
-  description: Learn AMP with free courses
+  description: Learn ABC with free courses
   icon: learn
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
 
 <section class="ap--section ap--intro">
-  <h1>{{ _('Learn Web Development with AMP') }}</h1>
+  <h1>{{ _('Learn Web Development with ABC') }}</h1>
   <p>
-  {{ _('AMP can help you create fast websites more quickly!') }}
+  {{ _('ABC can help you create fast websites more quickly!') }}
     <ul>
       <li>{{ _('If you’re <b>an experienced web developer</b>, you can create rich, fast sites with less code.') }}</li>
-      <li>{{ _('If you’re <b>a new web developer</b>, AMP helps you learn web development. If you know some HTML and CSS, you can use AMP to make an interactive website!') }}</li>
+      <li>{{ _('If you’re <b>a new web developer</b>, ABC helps you learn web development. If you know some HTML and CSS, you can use ABC to make an interactive website!') }}</li>
     </ul>
   </p>
   <div class="ap-m-copy ap-m-copy-center">
@@ -39,9 +39,9 @@ flyout:
   <div class="ap-o-teaser-grid">
     <div class="ap-o-teaser-grid-list">
       {% for teaser_doc in [
-        <!-- g.doc('/content/amp-dev/documentation/courses/beginning-course/index.md', locale=doc.locale), -->
-        <!-- g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale), -->
-        <!-- g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale), -->
+        g.doc('/content/amp-dev/documentation/courses/beginning-course/index.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-1/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-2/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-3/index.md', locale=doc.locale),
@@ -64,7 +64,7 @@ flyout:
   </div>
   <div class="ap--section">
     <h2>{{ _('About the courses') }}</h2>
-    <p>{{ _('These three free courses are in use in schools and training programs around the world. Now you can take them here, online, on our site. Suitable for beginners and experienced web developers alike, they will take you from zero to AMP!') }}</p>
+    <p>{{ _('These three free courses are in use in schools and training programs around the world. Now you can take them here, online, on our site. Suitable for beginners and experienced web developers alike, they will take you from zero to ABC!') }}</p>
     <p>{{ _('During this course, you’ll build a sample site for Chico’s famous, and fictional, Cheese Bicycles.') }}</p>
   </div>
 </section>
@@ -80,7 +80,7 @@ flyout:
     "headline": "Students",
     "button": {
       "url": g.doc('/content/amp-dev/documentation/courses/beginning-course/index.md', locale=doc.locale).url.path,
-      "text": "Learn AMP"
+      "text": "Learn ABC"
     }
   },
   {
@@ -88,7 +88,7 @@ flyout:
     "headline": "Teachers",
     "button": {
       "url": g.doc('/content/amp-dev/documentation/courses/teachers.md', locale=doc.locale).url.path,
-      "text": "Teach AMP"
+      "text": "Teach ABC"
     }
   }
 ]
@@ -103,7 +103,7 @@ flyout:
     <h4>{{ _('Requirements') }}</h4>
     <ul>
       <li>{{ _('Internet connection') }}</li>
-      <li>{{ _('<a href="https://www.google.com/chrome/" target="_blank">Chrome browser</a>, ideally, to use the <a href="https://chrome.google.com/webstore/detail/amp-validator/nmoffdblmcmgeicmolmhobpoocbbmknc" target="_blank">AMP Validator extension</a>') }}</li>
+      <li>{{ _('<a href="https://www.google.com/chrome/" target="_blank">Chrome browser</a>, ideally, to use the <a href="https://chrome.google.com/webstore/detail/amp-validator/nmoffdblmcmgeicmolmhobpoocbbmknc" target="_blank">ABC Validator extension</a>') }}</li>
       <li>{{ _('We use the online editor <a href="https://glitch.com/" target="_blank">Glitch</a>. No IDE or local web server needed!') }}</li>
     </ul>
   </div>
