--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -40,8 +40,8 @@ flyout:
     <div class="ap-o-teaser-grid-list">
       {% for teaser_doc in [
         g.doc('/content/amp-dev/documentation/courses/beginning-course/index.md', locale=doc.locale),
-        <!-- g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale), -->
-        <!-- g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale), -->
+        g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-1/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-2/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-3/index.md', locale=doc.locale),
