removed original course

--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -39,9 +39,9 @@ flyout:
   <div class="ap-o-teaser-grid">
     <div class="ap-o-teaser-grid-list">
       {% for teaser_doc in [
-        g.doc('/content/amp-dev/documentation/courses/beginning-course/index.md', locale=doc.locale),
-        g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale),
-        g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale),
+        <!-- g.doc('/content/amp-dev/documentation/courses/beginning-course/index.md', locale=doc.locale), -->
+        <!-- g.doc('/content/amp-dev/documentation/courses/intermediate-course/index.md', locale=doc.locale), -->
+        <!-- g.doc('/content/amp-dev/documentation/courses/advanced-course/index.md', locale=doc.locale), -->
         g.doc('/content/amp-dev/documentation/courses/chapter-1/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-2/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-3/index.md', locale=doc.locale),
@@ -72,7 +72,7 @@ flyout:
   </div>
 </section>
 -->
-
+<!--
 {% do doc.styles.addCssFile('/css/components/organisms/card-grid.css') %}
 <section class="ap--card-grid">
 
@@ -100,7 +100,7 @@ flyout:
 {% endwith %}
 
 </section>
-
+-->
 <!--
 <section class="ap--requirements">
   <div class="ap--section">
