--- a/pages/content/amp-dev/documentation/tutorial/index.html
+++ b/pages/content/amp-dev/documentation/tutorial/index.html
@@ -40,7 +40,7 @@ flyout:
     <div class="ap-o-teaser-grid-list">
       {% for teaser_doc in [
         g.doc('/content/amp-dev/documentation/tutorial/100/101.md', locale=doc.locale),
-        g.doc('/content/amp-dev/documentation/tutorial/400/401.html', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/tutorial/400/401.md', locale=doc.locale),
         ] %}
       {% include '/views/partials/teaser.j2' %}
       {% endfor %}
