--- a/pages/content/amp-dev/documentation/tutorial/index.html
+++ b/pages/content/amp-dev/documentation/tutorial/index.html
@@ -2,18 +2,20 @@
 $title@: Learn pizza tutorial
 $titles:
   navigation: Tutorial
-  sidebar: Learn pizza
+  sidebar: Learn Pizza OWL
   teaser: Tutorial
 $view: /views/overview/courses.j2
 $path: /documentation/tutorial/index.html
 $localization:
   path: /{locale}/documentation/tutorial/index.html
 $order: 0
-
 description: "Learn Structured Data by taking pizza tutorial."
 flyout:
   description: Learn Structured Data with tutorials
   icon: learn
+formats:
+  - websites
+  - nation-usa
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
