removed formats nation-usa

--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -1,5 +1,5 @@
 ---
-$title: Learn Structured Data with free courses
+$title@: Learn Structured Data with free courses
 $titles:
   navigation: Courses
   sidebar: Learn Structured Data
