--- a/pages/content/amp-dev/404.html
+++ b/pages/content/amp-dev/404.html
@@ -14,7 +14,7 @@ $sitemap:
     <div class="ap-m-jumbo">
       <div class="ap-a-ico">
         {% do doc.icons.useIcon('/icons/bolt-broken-solid.svg') %}
-        <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bolt-broken-solid"></use></svg>
+        <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#404-error"></use></svg>
       </div>
       <h1 class="ap-m-biggy-headline">404</h1>
       <h2 class="ap-m-jumbo-subline">{{ _('Uh oh! That\'s an error.') }}</h2>
