--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -45,6 +45,7 @@ flyout:
         g.doc('/content/amp-dev/documentation/courses/chapter-4/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-5/index.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/courses/chapter-6/index.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/courses/chapter-99/index.md', locale=doc.locale),
         ] %}
       {% include '/views/partials/teaser.j2' %}
       {% endfor %}
