--- a/pages/shared/data/json-ld.html
+++ b/pages/shared/data/json-ld.html
@@ -1,3 +1,8 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+</head>
+<body>
 <script type="application/ld+json">
 {
 	"@graph": [{
@@ -31,3 +36,5 @@
 	}]
 }
 </script>
+</body>
+</html>
