--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -1,19 +1,19 @@
 ---
 $title@: Learn Structured Data with free courses
+description@: "Learn Structured Data by taking these courses."
 $titles:
-  navigation: Courses
-  sidebar: Learn Structured Data
-  teaser: Courses
+  navigation@: Courses
+  sidebar@: Learn Structured Data (test)
+  teaser@: Courses
+flyout:
+  description@: Learn Structured Data with free courses
+  icon: learn
 $view: /views/overview/courses.j2
 $path: /documentation/courses/index.html
 $localization:
   path: /{locale}/documentation/courses/index.html
 $order: 0
 
-description: "Learn Structured Data by taking these courses."
-flyout:
-  description: Learn Structured Data with free courses
-  icon: learn
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
