--- a/pages/content/amp-dev/documentation/tutorial-h/index.html
+++ b/pages/content/amp-dev/documentation/tutorial-h/index.html
@@ -1,19 +1,18 @@
 ---
-$title@: HTML Control
+$title@: HTML Control page
+description@: data about HTML Control
 $titles:
-  navigation: Tutorial
-  sidebar: HTML Control
-  teaser: Tutorial
+  navigation@: Tutorial
+  sidebar@: HTML Control test
+  teaser@: Tutorial
+flyout:
+  description@: Control HTML
+  icon: learn
 $view: /views/overview/courses.j2
 $path: /documentation/tutorial-h/index.html
 $localization:
   path: /{locale}/documentation/tutorial-h/index.html
 $order: 0
-
-description: HTML Control
-flyout:
-  description: HTML Control
-  icon: learn
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
