--- a/pages/content/amp-dev/documentation/tutorial-p/index.html
+++ b/pages/content/amp-dev/documentation/tutorial-p/index.html
@@ -1,19 +1,18 @@
 ---
-$title@: Learn pizza tutorial
 $titles:
-  navigation: Tutorial
+  navigation: Pizza Tutorial
   sidebar: Learn Pizza OWL
-  teaser: Tutorial
+  teaser: Tutorial other
 $view: /views/overview/courses.j2
 $path: /documentation/tutorial-p/index.html
 $localization:
   path: /{locale}/documentation/tutorial-p/index.html
-$order: 0
-
-description: "Learn Structured Data by taking pizza tutorial."
 flyout:
-  description: Learn Structured Data with tutorials
+  description: Learn Structured Data
   icon: learn
+$order: 0
+$title@: Learn pizza tutorial
+description: 'Learn Structured Data by taking pizza tutorial.'
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
