--- a/pages/content/amp-dev/documentation/tutorial-h/index.html
+++ b/pages/content/amp-dev/documentation/tutorial-h/index.html
@@ -1,17 +1,17 @@
 ---
-$title@: HTML Control page
-description@: data about HTML Control
 $titles:
-  navigation@: Tutorial
-  sidebar@: HTML Control test
+  navigation@: Control Tutorial
+  sidebar@: HTML Control side
   teaser@: Tutorial
 flyout:
-  description@: Control HTML
+  description@: Control Tutorial
   icon: learn
 $view: /views/overview/courses.j2
 $path: /documentation/tutorial-h/index.html
 $localization:
   path: /{locale}/documentation/tutorial-h/index.html
+$title@: HTML Control page
+description@: data about HTML Control
 $order: 0
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
