--- a/pages/content/amp-dev/documentation/courses/index.html
+++ b/pages/content/amp-dev/documentation/courses/index.html
@@ -1,19 +1,18 @@
 ---
-$title@: Learn Structured Data with free courses
-description@: "Learn Structured Data by taking these courses."
 $titles:
   navigation@: Courses
-  sidebar@: Learn Structured Data (test)
-  teaser@: Courses
+  sidebar@: Learn Structured Data
+  teaser@: Courses teaser
 flyout:
-  description@: Learn Structured Data with free courses
+  description@: Learn Structured Data
   icon: learn
 $view: /views/overview/courses.j2
 $path: /documentation/courses/index.html
 $localization:
   path: /{locale}/documentation/courses/index.html
 $order: 0
-
+$title@: Learn Structured Data with free courses
+description@: "Learn Structured Data by taking these courses."
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
