added chapter 4 to pizza tutorial

--- a/pages/content/amp-dev/documentation/tutorial-p/index.html
+++ b/pages/content/amp-dev/documentation/tutorial-p/index.html
@@ -1,18 +1,18 @@
 ---
 $titles:
-  navigation: Pizza Tutorial
-  sidebar: Learn Pizza OWL
-  teaser: Tutorial other
+  navigation@: Pizza Tutorial
+  sidebar@: Learn Pizza OWL
+  teaser@: Tutorial other
+flyout:
+  description@: Learn Structured Data
+  icon: learn
+$order: 0
+$title@: Learn pizza tutorial
+description@: 'Learn Structured Data by taking pizza tutorial.'
 $view: /views/overview/courses.j2
 $path: /documentation/tutorial-p/index.html
 $localization:
   path: /{locale}/documentation/tutorial-p/index.html
-flyout:
-  description: Learn Structured Data
-  icon: learn
-$order: 0
-$title@: Learn pizza tutorial
-description: 'Learn Structured Data by taking pizza tutorial.'
 ---
 {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
