--- a/pages/content/amp-dev/documentation/tutorial-p/index.html
+++ b/pages/content/amp-dev/documentation/tutorial-p/index.html
@@ -41,6 +41,7 @@ $localization:
         g.doc('/content/amp-dev/documentation/tutorial-p/101/a101.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/tutorial-p/102/a101.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/tutorial-p/103/a101.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/tutorial-p/104/a101.md', locale=doc.locale),
         ] %}
       {% include '/views/partials/teaser.j2' %}
       {% endfor %}
