--- a/pages/content/amp-dev/about/websites-2021.html
+++ b/pages/content/amp-dev/about/websites-2021.html
@@ -284,6 +284,13 @@ faq: !g.yaml /shared/data/faq.yaml
   </section>
 </main>
 
-{% block footer %}
-{% include 'views/partials/footer.j2' %}
-{% endblock %}
+{% do doc.styles.addCssFile('css/components/organisms/footer.css') %}
+<footer class="ap--footer">
+  <div class="ap-o-footer">
+    <div class="ap-o-footer-line-top">
+      {% with sections = doc.faq.overview %}
+      {% include 'views/partials/accordion.j2' %}
+      {% endwith %}
+    </div>
+  </div>
+</footer>
