--- a/pages/content/amp-dev/about/stories.html
+++ b/pages/content/amp-dev/about/stories.html
@@ -438,9 +438,9 @@ templates:
   </div>
 </section>
 
-{% with format = 'stories', group = 'creation' %}
-{% include 'views/partials/tools-widget.j2' %}
-{% endwith %}
+{# {% with format = 'stories', group = 'creation' %} #}
+{# {% include 'views/partials/tools-widget.j2' %} #}
+{# {% endwith %} #}
 </main>
 
 {% do doc.styles.addCssFile('css/components/organisms/footer.css') %}
