--- a/pages/content/amp-dev/documentation/tutorial-h/index.html
+++ b/pages/content/amp-dev/documentation/tutorial-h/index.html
@@ -42,6 +42,7 @@ $order: 0
         g.doc('/content/amp-dev/documentation/tutorial-h/102/a101.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/tutorial-h/103/a101.md', locale=doc.locale),
         g.doc('/content/amp-dev/documentation/tutorial-h/104/a101.md', locale=doc.locale),
+        g.doc('/content/amp-dev/documentation/tutorial-h/105/a101.md', locale=doc.locale),
         ] %}
       {% include '/views/partials/teaser.j2' %}
       {% endfor %}
