--- a/pages/content/amp-dev/documentation/tutorial-p/index.html
+++ b/pages/content/amp-dev/documentation/tutorial-p/index.html
@@ -14,8 +14,8 @@ $path: /documentation/tutorial-p/index.html
 $localization:
   path: /{locale}/documentation/tutorial-p/index.html
 ---
-{% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %}
-{% do doc.styles.addCssFile('css/components/molecules/copy.css') %}
+{# {% do doc.styles.addCssFile('css/components/templates/courses-overview.css') %} #}
+{# {% do doc.styles.addCssFile('css/components/molecules/copy.css') %} #}
 
 <section class="ap--section ap--intro">
   <h1>{{ _('Learn how to represent complex knowledge with the pizza tutorial') }}</h1>
